{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 817,
  "lineage": "5f699d38-52c5-9969-c0dc-06b05e1b93cd",
  "resources": [
    {
      "mode": "data",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:886723286293:elastic-ip/eipalloc-0254be053a794954d",
            "association_id": "eipassoc-06f40940ba5ab1d5f",
            "domain": "vpc",
            "id": "eipalloc-0254be053a794954d",
            "network_interface_id": "eni-0deee3db52dbfa26c",
            "network_interface_owner_id": "886723286293",
            "private_dns": "ip-10-10-10-15.ap-northeast-2.compute.internal",
            "private_ip": "10.10.10.15",
            "public_dns": "ec2-3-37-223-112.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.37.223.112",
            "public_ipv4_pool": "amazon"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "public_lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:886723286293:security-group/sg-0ca24edcf1d5c7190",
            "description": "Allow HTTP/HTTPS from anywhere to ALB",
            "filter": [
              {
                "name": "group-name",
                "values": [
                  "public-alb-sg"
                ]
              }
            ],
            "id": "sg-0ca24edcf1d5c7190",
            "name": "public-alb-sg",
            "tags": {
              "Name": "public-lb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cd8b6ff7b3cf7986"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:886723286293:security-group/sg-05bb734b3ecda9616",
            "description": "web-sg",
            "filter": [
              {
                "name": "group-name",
                "values": [
                  "web-sg"
                ]
              }
            ],
            "id": "sg-05bb734b3ecda9616",
            "name": "web-sg",
            "tags": {
              "Name": "web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cd8b6ff7b3cf7986"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "existing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:886723286293:vpc/vpc-0cd8b6ff7b3cf7986",
            "cidr_block": "10.10.10.0/24",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0346237d6fc77a789",
                "cidr_block": "10.10.10.0/24",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0936219da13c2bb22",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "msa-vpc"
                ]
              }
            ],
            "id": "vpc-0cd8b6ff7b3cf7986",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03acb77e4c830253d",
            "owner_id": "886723286293",
            "tags": {
              "Name": "msa-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:886723286293:security-group/sg-020f7d4234af3036f",
            "description": "Security Group for AWS Load Balancer Controller",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-020f7d4234af3036f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alb-controller-sg",
            "name_prefix": "",
            "owner_id": "886723286293",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-sg"
            },
            "tags_all": {
              "Name": "alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cd8b6ff7b3cf7986"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_subnets.private",
            "data.aws_subnets.public",
            "data.aws_vpc.existing",
            "module.eks.aws_eks_access_entry.iam_user_admin",
            "module.eks.aws_eks_access_policy_association.iam_user_admin_policy",
            "module.eks.aws_eks_cluster.msa_eks",
            "module.eks.aws_eks_node_group.msa_ng",
            "module.eks.aws_iam_openid_connect_provider.oidc",
            "module.eks.aws_iam_role.msa_eks_role",
            "module.eks.aws_iam_role.msa_nodegroup_role",
            "module.eks.aws_iam_role_policy_attachment.ebs_csi_policy",
            "module.eks.aws_iam_role_policy_attachment.msa-ng-AmazonEC2ContainerRegistryReadOnly",
            "module.eks.aws_iam_role_policy_attachment.msa-ng-AmazonEKSWorkerNodePolicy",
            "module.eks.aws_iam_role_policy_attachment.msa-ng-AmazonEKS_CNI_Policy",
            "module.eks.aws_iam_role_policy_attachment.msa_eks_role_attachment",
            "module.eks.data.aws_caller_identity.current",
            "null_resource.wait_for_cluster"
          ]
        }
      ]
    },
    {
      "module": "module.k8s",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "univ_ingress_new",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"].eks",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "default/univ-ingress",
            "metadata": [
              {
                "annotations": {
                  "alb.ingress.kubernetes.io/listen-ports": "[{\"HTTP\":80}]",
                  "alb.ingress.kubernetes.io/scheme": "internet-facing",
                  "alb.ingress.kubernetes.io/target-type": "ip"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "univ-ingress",
                "namespace": "default",
                "resource_version": "65967",
                "uid": "ea5bd7d3-3de0-48ae-a36f-2dc9b20e16a7"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "alb",
                "rule": [
                  {
                    "host": "",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "cert-service",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/cert",
                            "path_type": "Prefix"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "class-service",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/class",
                            "path_type": "Prefix"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "home-service",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/home",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "k8s-default-univingr-f31266f93d-196367165.ap-northeast-2.elb.amazonaws.com",
                        "ip": ""
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_eks_cluster_auth.eks",
            "data.aws_subnets.private",
            "data.aws_vpc.existing",
            "module.eks.aws_eks_cluster.msa_eks",
            "module.eks.aws_iam_role.msa_eks_role",
            "module.eks.aws_iam_role_policy_attachment.msa_eks_role_attachment"
          ]
        }
      ]
    },
    {
      "module": "module.k8s",
      "mode": "managed",
      "type": "kubernetes_service_v1",
      "name": "cert_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"].eks",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/cert-service",
            "metadata": [
              {
                "generation": 0,
                "name": "cert-service",
                "namespace": "default",
                "resource_version": "59901",
                "uid": "17366f03-5fb0-4521-8557-25de68e1e42f"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "172.20.71.203",
                "cluster_ips": [
                  "172.20.71.203"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "80"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "cert"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_eks_cluster_auth.eks",
            "data.aws_subnets.private",
            "data.aws_vpc.existing",
            "module.eks.aws_eks_cluster.msa_eks",
            "module.eks.aws_iam_role.msa_eks_role",
            "module.eks.aws_iam_role_policy_attachment.msa_eks_role_attachment"
          ]
        }
      ]
    },
    {
      "module": "module.k8s",
      "mode": "managed",
      "type": "kubernetes_service_v1",
      "name": "class_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"].eks",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/class-service",
            "metadata": [
              {
                "generation": 0,
                "name": "class-service",
                "namespace": "default",
                "resource_version": "59904",
                "uid": "a11dfac1-b216-46b5-bff1-8033321f3b0b"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "172.20.249.202",
                "cluster_ips": [
                  "172.20.249.202"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "80"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "class"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_eks_cluster_auth.eks",
            "data.aws_subnets.private",
            "data.aws_vpc.existing",
            "module.eks.aws_eks_cluster.msa_eks",
            "module.eks.aws_iam_role.msa_eks_role",
            "module.eks.aws_iam_role_policy_attachment.msa_eks_role_attachment"
          ]
        }
      ]
    },
    {
      "module": "module.k8s",
      "mode": "managed",
      "type": "kubernetes_service_v1",
      "name": "home_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"].eks",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/home-service",
            "metadata": [
              {
                "generation": 0,
                "name": "home-service",
                "namespace": "default",
                "resource_version": "59899",
                "uid": "0d86a06b-f4b6-4b8d-85bc-4fa08b5b0209"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "172.20.11.147",
                "cluster_ips": [
                  "172.20.11.147"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "80"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "home"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_eks_cluster_auth.eks",
            "data.aws_subnets.private",
            "data.aws_vpc.existing",
            "module.eks.aws_eks_cluster.msa_eks",
            "module.eks.aws_iam_role.msa_eks_role",
            "module.eks.aws_iam_role_policy_attachment.msa_eks_role_attachment"
          ]
        }
      ]
    }
  ]
}